tests/spec/format/snapshots/binary_pipeline_with_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    x
    |> foo()
    // comment before bar
    |> bar()
  }
---
fn test() {
  x
    |> foo()
    |> // comment before bar
    bar()
}
