tests/spec/format/snapshots/binary_remainder.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { 10 % 3 }"
---
fn test() {
  10 % 3
}
