tests/spec/format/snapshots/binary_subtraction.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { 5 - 3 }"
---
fn test() {
  5 - 3
}
