tests/spec/format/snapshots/binary_with_comment_before_right.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    1 +
    // comment before right operand
    2
  }
---
fn test() {
  1 +
  // comment before right operand
  2
}
