tests/spec/format/snapshots/block_empty_with_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn foo() {
    // nothing here
  }
---
fn foo() {
  // nothing here
}
