tests/spec/format/snapshots/block_with_blank_line.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn foo() {
    let x = 1;
  
    let y = 2;
    x + y
  }
---
fn foo() {
  let x = 1

  let y = 2
  x + y
}
