tests/spec/format/snapshots/call_no_args.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { foo() }"
---
fn test() {
  foo()
}
