tests/spec/format/snapshots/call_with_args.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { add(1, 2, 3) }"
---
fn test() {
  add(1, 2, 3)
}
