tests/spec/format/snapshots/call_with_comment_between_args.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    foo(
      a,
      // comment before b
      b,
      c,
    );
  }
---
fn test() {
  foo(
    a,
    // comment before b
    b,
    c,
  )
}
