tests/spec/format/snapshots/call_with_leading_args_and_spread_arg.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { foo(a, b, args...) }"
---
fn test() {
  foo(a, b, args...)
}
