tests/spec/format/snapshots/call_with_multiple_type_args.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { func<A, B, C>(x, y) }"
---
fn test() {
  func<A, B, C>(x, y)
}
