tests/spec/format/snapshots/call_with_single_closure_arg.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { map(|x| x + 1) }"
---
fn test() {
  map(|x| x + 1)
}
